# ComfyUI-Qwen2_5-Omni

./: README.md  nodes.py  pyproject.toml  requirements.txt
example_workflows/: ComfyUI-Qwen2_5-Omni.json
js/: wid.js
